--- a/.github/workflows/Build and Push Docker Image.yml
+++ b/.github/workflows/Build and Push Docker Image.yml
@@ -2,8 +2,10 @@ name: Build and Push Docker Image
 
 on:
   push:
-    branches:
-      - master  # Replace with your branch name if different
+    # branches:
+    #   - master  # Replace with your branch name if different
+    tags:
+      - "*"
 
 env:
   DOCKER_HUB_USERNAME: cursor1st
@@ -29,11 +31,20 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+
+      - name: Login to GHCR
+        if: github.event_name != 'pull_request'
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
       
       - name: Log in to Docker Hub
         if: github.event_name != 'pull_request'
         uses: docker/login-action@v3
         with:
+          registry: docker.io
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_ACCESS_TOKEN }}
       
@@ -42,6 +53,7 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           images: |
+            ghcr.io/${{ github.repository }}
             docker.io/${{ env.DOCKER_HUB_USERNAME }}/${{ env.DOCKER_HUB_REPO }}
           tags: |
             type=raw,value=dev,enable=${{ github.ref == 'refs/heads/master' }}
